--- a/demomaker.cfg
+++ b/demomaker.cfg
@@ -3,3 +3,4 @@ path=/home/ubuntu/forgescan.github.io
 pathtoS3key=/home/ubuntu/rootkey.csv
 loggingtype=long
 defaultbucket=hapyakdemopagedrop
+pathtolocalfiledump=/home/ubuntu/forgescan.github.io/localfiledump
