--- a/demomaker.cfg
+++ b/demomaker.cfg
@@ -1,6 +1,12 @@
 [config]
 path=/home/ubuntu/forgescan.github.io
 pathtoS3key=/home/ubuntu/rootkey.csv
+pathtolocalfiledump=/home/ubuntu/forgescan.github.io/localfiledump
+pathtoerrorlog=/home/ubuntu/forgescan.github.io/demomaker.error.log
+
+
+
+
 loggingtype=long
 defaultbucket=hapyakdemopagedrop
-pathtolocalfiledump=/home/ubuntu/forgescan.github.io/localfiledump
+
