--- a/demomaker.cfg
+++ b/demomaker.cfg
@@ -1,7 +1,7 @@
 [config]
-path=/home/ubuntu/forgescan.github.io
+path=/home/ubuntu/forgescan.github.io/
 pathtoS3key=/home/ubuntu/rootkey.csv
-pathtolocalfiledump=/home/ubuntu/forgescan.github.io/filedump
+pathtolocalfiledump=/home/ubuntu/forgescan.github.io/filedump/
 pathtoerrorlog=/home/ubuntu/forgescan.github.io/demomaker.error.log
 
 
